--- a/index.html
+++ b/index.html
@@ -13,6 +13,35 @@
 <body>
     <header></header>
     <main></main>
-    <footer></footer>
+    <footer>
+        <div class="footer__content">
+            <div class="footer__title--content">
+                <h1 class="footer__title">Fitness</h1>
+                <p class="footer__description">
+                    We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.
+                </p>
+            </div>
+
+            <div class="footer__get--started1">
+                <h2>Get Started</h2>
+                <p>Service</p>
+                <p>Contact Us</p>
+                <p>Affiliate Program</p>
+                <p>About Us</p>
+            </div>
+
+            <div class="footer__get--started2">
+                <h2>Get Started</h2>
+                <p>Fitness</p>
+                <p>Platform</p>
+                <p>Workout Library</p>
+                <p>App Design</p>
+            </div>
+        </div>
+
+        <hr class="horizontal__row">
+
+        <p id="copyright__msg">All right reserved @Fitness 2024</p>
+    </footer>
 </body>
 </html>
