--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="style.css/computer.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        
+    </header>
     <main></main>
     <footer>
         <div class="footer__content">
