--- a/index.html
+++ b/index.html
@@ -12,10 +12,42 @@
 </head>
 <body>
     <header>
-        
+        <div class="navbar">
+            <div class="navbar__logo">
+              <h3 class="nav__title">Fitness</h3>
+            </div>
+    
+            <div class="nav__lists">
+              <ul class="nav__list">
+                <li id="home__color" class="nav__item"><a href="#">Home</a></li>
+                <li class="nav__item"><a href="#">Service</a></li>
+                <li class="nav__item"><a href="#">Contact</a></li>
+                <li class="nav__item"><a href="#">About</a></li>
+                <li class="nav__item bar-icon">
+                  <a href="#"><i class="fa-solid fa-bars"></i></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="banner">
+            <div class="banner__content">
+              <h1 class="banner__title">Get body in <span id="shape">shape</span> & stay healthy</h1>
+              <p class="banner__description">
+                A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!
+              </p>
+              <button class="join__btn">Join Club Now!</button>
+              <button class="download__btn">Download App</button>
+            </div>
+            <div class="banner__image">
+              <div class="image">
+                <img src="images/banner.png" alt="">
+              </div>
+            </div>
+          </div>
     </header>
     <main></main>
-    <footer>
+    <footer id="display__hide">
         <div class="footer__content">
             <div class="footer__title--content">
                 <h1 class="footer__title">Fitness</h1>
