Added header design

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li class="nav__item"><a href="#">Service</a></li>
                 <li class="nav__item"><a href="#">Contact</a></li>
                 <li class="nav__item"><a href="#">About</a></li>
-                <li class="nav__item bar-icon">
+                <li id="display__hide" class="nav__item bar-icon">
                   <a href="#"><i class="fa-solid fa-bars"></i></a>
                 </li>
               </ul>
@@ -42,6 +42,15 @@
             <div class="banner__image">
               <div class="image">
                 <img src="images/banner.png" alt="">
+              </div>
+              <div class="div350">
+                <div class="circle"></div>
+                <h4>350+</h4>
+                <p>Video tutorial</p>
+              </div>
+              <div class="div500">
+                <h2>500+</h2>
+                <p>Free Workout Videos</p>
               </div>
             </div>
           </div>
