rem added in font size

--- a/index.html
+++ b/index.html
@@ -48,7 +48,16 @@
       </div>
     </div>
   </header>
-  <main></main>
+  <main>
+    <div class="change__habit--section">
+      <div class="habit__text--container">
+        <h2>Change Your Habits</h2>
+        <p>
+          We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.
+        </p>
+      </div>
+    </div>
+  </main>
   <footer></footer>
 </body>
 </html>
