Added change habit section design

--- a/index.html
+++ b/index.html
@@ -56,6 +56,37 @@
           We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.
         </p>
       </div>
+
+      <div class="habit__image--container">
+        <div class="image__container">
+          <div class="image">
+            <img src="images/image3.png" alt="Gym Boy">
+          </div>
+          <h4>Movement</h4>
+          <p>We believe fitness should be accessible to everyone</p>
+        </div>
+        <div class="image__container">
+          <div class="image">
+            <img src="images/image2.png" alt="">
+          </div>
+          <h4>Movement</h4>
+          <p>We believe fitness should be accessible to everyone</p>
+        </div>
+        <div class="image__container">
+          <div class="image">
+            <img src="images/image4.png" alt="">
+          </div>
+          <h4>Movement</h4>
+          <p>We believe fitness should be accessible to everyone</p>
+        </div>
+        <div class="image__container">
+          <div class="image">
+            <img src="images/image5.png" alt="">
+          </div>
+          <h4>Movement</h4>
+          <p>We believe fitness should be accessible to everyone</p>
+        </div>
+      </div>
     </div>
   </main>
   <footer></footer>
