Added run extra mile section design

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
   </header>
   <main>
-    <div class="change__habit--section">
+    <section class="change__habit--section">
       <div class="habit__text--container">
         <h2>Change Your Habits</h2>
         <p>
@@ -69,25 +69,39 @@
           <div class="image">
             <img src="images/image2.png" alt="">
           </div>
-          <h4>Movement</h4>
+          <h4>Time</h4>
           <p>We believe fitness should be accessible to everyone</p>
         </div>
         <div class="image__container">
           <div class="image">
             <img src="images/image4.png" alt="">
           </div>
-          <h4>Movement</h4>
+          <h4>Practice</h4>
           <p>We believe fitness should be accessible to everyone</p>
         </div>
         <div class="image__container">
           <div class="image">
             <img src="images/image5.png" alt="">
           </div>
-          <h4>Movement</h4>
+          <h4>Weight Loss</h4>
           <p>We believe fitness should be accessible to everyone</p>
         </div>
       </div>
-    </div>
+    </section>
+
+    <section class="extra__mile--section">
+      <div class="extra__mile--contents">
+        <h2>Run an Extra <br>
+          Mile Easily</h2>
+          <p>
+            We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.
+          </p>
+          <button id="join__btn">Join Now</button>
+      </div>
+      <div class="extra__mile--image">
+        <img src="images/run.jpg" alt="Run Picture">
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
