--- a/index.html
+++ b/index.html
@@ -102,6 +102,82 @@
         <img src="images/run.jpg" alt="Run Picture">
       </div>
     </section>
+
+    <section class="trainings__section">
+      <div class="trainings__section--content">
+        <h2>Trainings and Exercises</h2>
+        <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+      </div>
+    </section>
+
+    <section class="BMI__content">
+      <h2>BMI Calculator</h2>
+      <p>
+        We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.
+      </p>
+    </section>
+
+    <section class="BMI__calculator--section">
+      <div class="BMI__chart">
+        <h3>BMI Calculator Chart</h3>
+        <div class="chart__table">
+          <table>
+            <thead>
+              <tr>
+                <th>BMI</th>
+                <th>Weight Status</th>
+              </tr>
+            </thead>
+
+            <tbody>
+              <tr>
+                <td>Below 18.5</td>
+                <td>Underweight</td>
+              </tr>
+              <tr>
+                <td>18.5 - 24.9</td>
+                <td>Healthy</td>
+              </tr>
+              <tr>
+                <td>25.0 - 29.9</td>
+                <td>Overweight</td>
+              </tr>
+              <tr>
+                <td>30.0 - and Above</td>
+                <td>Obese</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="BMI__calculator">
+        <h3>Calculate your BMI</h3>
+        <p>
+          We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. 
+        </p>
+
+        <div class="calculate__form">
+          <form action="">
+            <div class="form1">
+              <input type="number" name="" id="height" placeholder="Height/cm">
+              <input type="number" name="" id="weight" placeholder="Weight/kg">
+            </div>
+            <div class="form2">
+              <input type="number" name="" id="age" placeholder="Age">
+              <select name="" id="sex">
+                <option value="">Sex</option>
+              </select>
+            </div>
+            <div class="form3">
+              <select name="" id="activity">
+                <option value="">Select an activity factor</option>
+              </select>
+            </div>
+          </form>
+        </div>
+        <button id="calculate__btn">Calculate</button>
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
