Added Team member section design

--- a/index.html
+++ b/index.html
@@ -178,6 +178,47 @@
         <button id="calculate__btn">Calculate</button>
       </div>
     </section>
+
+    <section class="team-section">
+      <div class="team__contents">
+        <h2 class="team__contents__title">Meet Our Team</h2>
+        <p class="team__contents__description">
+          We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.
+        </p>
+      </div>
+      <div class="team__images">
+        <div class="team__image">
+          <img src="images/trainer1.png" alt="Trainer 1">
+          <h4 class="team__image__title">Jerome Bell</h4>
+          <p class="team__image__description">Trainer</p>
+        </div>
+        <div class="team__image">
+          <img src="images/trainer2.png" alt="Trainer 2">
+          <h4 class="team__image__title">Camerop Willi</h4>
+          <p class="team__image__description">Trainer</p>
+        </div>
+        <div class="team__image">
+          <img src="images/trainer3.png" alt="Trainer 3">
+          <h4 class="team__image__title">Darrel Starward</h4>
+          <p class="team__image__description">Trainer</p>
+        </div>
+        <div class="team__image">
+          <img src="images/trainer4.png" alt="Trainer 4">
+          <h4 class="team__image__title">Diane Russel</h4>
+          <p class="team__image__description">Trainer</p>
+        </div>
+        <div class="team__image">
+          <img src="images/trainer5.png" alt="Trainer 5">
+          <h4 class="team__image__title">Cody Fisher</h4>
+          <p class="team__image__description">Trainer</p>
+        </div>
+        <div class="team__image">
+          <img src="images/trainer6.png" alt="Trainer 6">
+          <h4 class="team__image__title">Theresa Webb</h4>
+          <p class="team__image__description">Trainer</p>
+        </div>
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
