Added footer section design

--- a/index.html
+++ b/index.html
@@ -220,6 +220,35 @@
       </div>
     </section>
   </main>
-  <footer></footer>
+  <footer class="footer">
+    <div class="footer-content">
+      <div class="footer__fitness__content">
+        <h2 class="footer__fitness__title">Fitness</h2>
+        <p class="footer__fitness__description">
+          We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.
+        </p>
+      </div>
+      <div class="footer__get__started__content">
+        <div class="get__started__one">
+          <h3 class="get__started__title">Get Started</h3>
+          <p class="get__started__description">Service</p>
+          <p class="get__started__description">Contact Us</p>
+          <p class="get__started__description">Affiliate Program</p>
+          <p class="get__started__description">About Us</p>
+        </div>
+        <div class="get__started__two">
+          <h3 class="get__started__title">Get Started</h3>
+          <p class="get__started__description">Fitness</p>
+          <p class="get__started__description">Platform</p>
+          <p class="get__started__description">Workout Library</p>
+          <p class="get__started__description">App Design</p>
+        </div>
+      </div>
+    </div>
+
+    <hr class="horizontal__row">
+
+    <p class="footer__description">All right reserved @Fitness 2024</p>
+  </footer>
 </body>
 </html>
