Create mobile.css and link with html file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="style.css/style.css" />
+    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" media="screen and (max-width: 576px)" href="style/mobile.css">
   </head>
   <body>
     <header>
@@ -24,6 +25,7 @@
           <li class="nav__item"><a href="#">Service</a></li>
           <li class="nav__item"><a href="#">Contact</a></li>
           <li class="nav__item"><a href="#">About</a></li>
+          <li id="display--hide" class="nav__item"><a href="#"><i class="fa-solid fa-bars"></i></a></li>
         </ul>
       </nav>
 
