Responsive change your habit section added

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
       </div>
     </header>
-    <main id="display--hide">
+    <main>
       <section class="change__habit--section">
         <div class="habit__text--container">
           <h2>Change Your Habits</h2>
@@ -110,7 +110,7 @@
         </div>
       </section>
 
-      <section class="extra__mile--section">
+      <section  id="display--hide" class="extra__mile--section">
         <div class="extra__mile--contents">
           <h2>
             Run an Extra <br />
@@ -165,7 +165,7 @@
         </div>
       </section>
 
-      <section class="BMI__content">
+      <section  id="display--hide" class="BMI__content">
         <h2>BMI Calculator</h2>
         <p>
           We believe fitness should be accessible to everyone, everywhere,
@@ -173,7 +173,7 @@
         </p>
       </section>
 
-      <section class="BMI__calculator--section">
+      <section  id="display--hide" class="BMI__calculator--section">
         <div class="BMI__chart">
           <h3>BMI Calculator Chart</h3>
           <div class="chart__table">
@@ -246,7 +246,7 @@
         </div>
       </section>
 
-      <section class="team-section">
+      <section  id="display--hide" class="team-section">
         <div class="team__contents">
           <h2 class="team__contents__title">Meet Our Team</h2>
           <p class="team__contents__description">
