Responsive extra mile section added

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
       </section>
 
-      <section  id="display--hide" class="extra__mile--section">
+      <section class="extra__mile--section">
         <div class="extra__mile--contents">
           <h2>
             Run an Extra <br />
