Responsive BMI calculation section added

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         </div>
       </section>
 
-      <section  id="display--hide" class="BMI__content">
+      <section class="BMI__content">
         <h2>BMI Calculator</h2>
         <p>
           We believe fitness should be accessible to everyone, everywhere,
@@ -173,7 +173,7 @@
         </p>
       </section>
 
-      <section  id="display--hide" class="BMI__calculator--section">
+      <section class="BMI__calculator--section">
         <div class="BMI__chart">
           <h3>BMI Calculator Chart</h3>
           <div class="chart__table">
