--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         </div>
       </section>
 
-      <section  id="display--hide" class="team-section">
+      <section class="team-section">
         <div class="team__contents">
           <h2 class="team__contents__title">Meet Our Team</h2>
           <p class="team__contents__description">
