Responsive footer section added

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
         </div>
       </section>
     </main>
-    <footer id="display--hide" class="footer">
+    <footer class="footer">
       <div class="footer-content">
         <div class="footer__fitness__content">
           <h2 class="footer__fitness__title">Fitness</h2>
