--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <header>
       <nav class="navbar">
-        <div class="navtitle">
+        <div class="nav__title">
           <h3>Fitness</h3>
         </div>
         <ul class="nav__list">
