footer are resize

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             transformation stories to help you get fit and stay fit!
           </p>
           <div class="banner__btn">
-            <button class="join__btn">Join Now!</button>
+            <button class="join__btn">Join Club Now!</button>
             <button class="download__btn">Download App</button>
           </div>
         </div>
