play button added in 350 box

--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
             <img src="images/banner.png" alt="Fitness Banner Picture" />
           </div>
           <div class="div350">
-            <h4>350+</h4>
-            <p>Video Tutorial</p>
+            <div class="red__circle"><i class="play__btn fa-solid fa-play"></i></div>
+            <div class="div350__content">
+              <h4>350+</h4>
+              <p>Video Tutorial</p>
+            </div>
           </div>
           <div class="div500">
             <h4>550+</h4>
