Added training section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
             <img src="images/banner.png" alt="Fitness Banner Picture" />
           </div>
           <div class="div350">
-            <div class="red__circle"><i class="play__btn fa-solid fa-play"></i></div>
+            <div class="red__circle">
+              <i class="play__btn fa-solid fa-play"></i>
+            </div>
             <div class="div350__content">
               <h4>350+</h4>
               <p>Video Tutorial</p>
@@ -131,44 +133,42 @@
         </div>
       </section>
 
-      <section id="display--hide" class="trainings__section">
-        <div class="trainings__section__content">
-          <h2 class="trainings__content__title">Trainings and Exercises</h2>
-          <p class="trainings__content__description">
+      <section class="training-section">
+        <div class="training__content">
+          <h2 class="training__content-title">Trainings and Exercises</h2>
+          <p class="training__content-description">
             We believe fitness should be accessible to everyone, everywhere,
             regardless of income or access to a gym.
           </p>
         </div>
 
-        <div class="training__section__images">
-          <div class="training__image">
-            <img src="images/exercise1.jpg" alt="" />
-            <p>Health is most expensive gift from Allah.</p>
+        <div class="training__picture">
+          <div class="training__div-1">
+            <div class="training__card-1">
+              <p>Work Hard</p>
+            </div>
+            <div class="training__card-2">
+              <p>Work Hard</p>
+            </div>
+            <div class="training__card-3">
+              <p>Leg Press: Works the quadriceps and glues</p>
+            </div>
           </div>
-          <div class="training__image">
-            <img src="images/exercise2.png" alt="" />
-            <p>Health is most expensive gift from Allah.</p>
-          </div>
-          <div class="training__image">
-            <img src="images/exercise3.png" alt="" />
-            <p>Health is most expensive gift from Allah.</p>
-          </div>
-          <div class="training__image">
-            <img src="images/exercise4.png" alt="" />
-            <p>Health is most expensive gift from Allah.</p>
-          </div>
-          <div class="training__image">
-            <img src="images/exercise5.jpg" alt="" />
-            <p>Health is most expensive gift from Allah.</p>
-          </div>
-          <div class="training__image">
-            <img src="images/exercise6.jpg" alt="" />
-            <p>Health is most expensive gift from Allah.</p>
+          <div class="training__div-2">
+            <div class="training__card-4">
+              <p>Leg Press: Works the quadriceps and gluts</p>
+            </div>
+            <div class="training__card-5">
+              <p>Leg Press: Works the quadriceps and gluts</p>
+            </div>
+            <div class="training__card-6">
+              <p>Leg Press: Works the quadriceps and gluts</p>
+            </div>
           </div>
         </div>
       </section>
 
-      <section class="BMI__content">
+      <section id="display--hide" class="BMI__content">
         <h2>BMI Calculator</h2>
         <p>
           We believe fitness should be accessible to everyone, everywhere,
@@ -176,7 +176,7 @@
         </p>
       </section>
 
-      <section class="BMI__calculator--section">
+      <section id="display--hide" class="BMI__calculator--section">
         <div class="BMI__chart">
           <h3>BMI Calculator Chart</h3>
           <div class="chart__table">
@@ -249,7 +249,7 @@
         </div>
       </section>
 
-      <section class="team-section">
+      <section id="display--hide" class="team-section">
         <div class="team__contents">
           <h2 class="team__contents__title">Meet Our Team</h2>
           <p class="team__contents__description">
@@ -291,7 +291,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <footer id="display--hide" class="footer">
       <div class="footer-content">
         <div class="footer__fitness__content">
           <h2 class="footer__fitness__title">Fitness</h2>
