responsive training section

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </div>
       </section>
 
-      <section id="display--hide" class="training-section">
+      <section class="training-section">
         <div class="training__content">
           <h2 class="training__content-title">Trainings and Exercises</h2>
           <p class="training__content-description">
