Fixed responsive bugs in BMI content and calculator section

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </div>
       </section>
 
-      <section id="display--hide" class="BMI__content">
+      <section class="BMI__content">
         <h2>BMI Calculator</h2>
         <p>
           We believe fitness should be accessible to everyone, everywhere,
@@ -176,7 +176,7 @@
         </p>
       </section>
 
-      <section id="display--hide" class="BMI__calculator--section">
+      <section class="BMI__calculator--section">
         <div class="BMI__chart">
           <h3>BMI Calculator Chart</h3>
           <div class="chart__table">
@@ -236,11 +236,17 @@
                 <input type="number" name="" id="age" placeholder="Age" />
                 <select name="" id="sex">
                   <option value="">Sex</option>
+                  <option value="">Male</option>
+                  <option value="">Female</option>
+                  <option value="">Other</option>
                 </select>
               </div>
               <div class="form3">
                 <select name="" id="activity">
                   <option value="">Select an activity factor</option>
+                  <option value="">Cardio</option>
+                  <option value="">Free Hand Workout</option>
+                  <option value="">Weight Lifting</option>
                 </select>
               </div>
             </form>
