--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         </div>
       </section>
 
-      <section id="display--hide" class="team-section">
+      <section class="team-section">
         <div class="team__contents">
           <h2 class="team__contents__title">Meet Our Team</h2>
           <p class="team__contents__description">
@@ -297,7 +297,7 @@
         </div>
       </section>
     </main>
-    <footer id="display--hide" class="footer">
+    <footer class="footer">
       <div class="footer-content">
         <div class="footer__fitness__content">
           <h2 class="footer__fitness__title">Fitness</h2>
