Added passes section

--- a/index.html
+++ b/index.html
@@ -296,8 +296,63 @@
           </div>
         </div>
       </section>
+
+      <section class="passes-section">
+        <div class="passes__content">
+          <h2 class="passes__content-title">Our Gym Passes</h2>
+
+          <div class="passes__content-switch">
+            <h4 class="passes__switch-caption">Monthly / Yearly</h4>
+            <i class="switch__icon fa-solid fa-toggle-off"></i>
+          </div>
+        </div>
+
+        <div class="passes__details">
+          <i class="arrow__icon fa-solid fa-circle-arrow-left"></i>
+          <div class="passes__details-crossfit">
+            <h3 class="crosscut__title">CROSSCUT</h3>
+            <h1 class="crosscut__price">120$<sub class="sub__text">/MO</sub></h1>
+
+            <p class="crosscut__description">
+              <i class="fa-regular fa-circle-check"></i> Exercise improves mood
+            </p>
+            <p class="crosscut__description">
+              <i class="fa-regular fa-circle-check"></i> Exercise boosts energy
+            </p>
+            <p class="crosscut__description">
+              <i class="fa-regular fa-circle-check"></i> Exercise can be fun and social!
+            </p>
+            <p class="crosscut__description">
+              <i class="fa-regular fa-circle-check"></i> Improved cognitive function
+            </p>
+
+            <button class="purchase__btn">Purchase Now</button>
+          </div>
+
+          <div class="passes__details-crossfit">
+            <h3 class="crosscut__title">CROSSCUT</h3>
+            <h1 class="crosscut__price">120$<sub class="sub__text">/MO</sub></h1>
+
+            <p class="crosscut__description">
+              <i class="fa-regular fa-circle-check"></i> Exercise improves mood
+            </p>
+            <p class="crosscut__description">
+              <i class="fa-regular fa-circle-check"></i> Exercise boosts energy
+            </p>
+            <p class="crosscut__description">
+              <i class="fa-regular fa-circle-check"></i> Exercise can be fun and social!
+            </p>
+            <p class="crosscut__description">
+              <i class="fa-regular fa-circle-check"></i> Improved cognitive function
+            </p>
+
+            <button class="purchase__btn">Purchase Now</button>
+          </div>
+          <i class="arrow__icon fa-solid fa-circle-arrow-right"></i>
+        </div>
+      </section>
     </main>
-    <footer class="footer">
+    <footer id="display--hide" class="footer">
       <div class="footer-content">
         <div class="footer__fitness__content">
           <h2 class="footer__fitness__title">Fitness</h2>
