Added responsive passes section

--- a/index.html
+++ b/index.html
@@ -330,8 +330,8 @@
           </div>
 
           <div class="passes__details-crossfit">
-            <h3 class="crosscut__title">CROSSCUT</h3>
-            <h1 class="crosscut__price">120$<sub class="sub__text">/MO</sub></h1>
+            <h3 class="crosscut__title">OPEN GYM</h3>
+            <h1 class="crosscut__price">109$<sub class="sub__text">/MO</sub></h1>
 
             <p class="crosscut__description">
               <i class="fa-regular fa-circle-check"></i> Exercise improves mood
@@ -352,7 +352,7 @@
         </div>
       </section>
     </main>
-    <footer id="display--hide" class="footer">
+    <footer class="footer">
       <div class="footer-content">
         <div class="footer__fitness__content">
           <h2 class="footer__fitness__title">Fitness</h2>
