Fixed bugs in passes section

--- a/index.html
+++ b/index.html
@@ -313,19 +313,21 @@
             <h3 class="crosscut__title">CROSSCUT</h3>
             <h1 class="crosscut__price">120$<sub class="sub__text">/MO</sub></h1>
 
-            <p class="crosscut__description">
-              <i class="fa-regular fa-circle-check"></i> Exercise improves mood
-            </p>
-            <p class="crosscut__description">
-              <i class="fa-regular fa-circle-check"></i> Exercise boosts energy
-            </p>
-            <p class="crosscut__description">
-              <i class="fa-regular fa-circle-check"></i> Exercise can be fun and social!
-            </p>
-            <p class="crosscut__description">
-              <i class="fa-regular fa-circle-check"></i> Improved cognitive function
-            </p>
-
+            <div >
+              <p class="crosscut__description">
+                <i class="fa-regular fa-circle-check"></i> Exercise improves mood
+              </p>
+              <p class="crosscut__description">
+                <i class="fa-regular fa-circle-check"></i> Exercise boosts energy
+              </p>
+              <p class="crosscut__description">
+                <i class="fa-regular fa-circle-check"></i> Exercise can be fun and social!
+              </p>
+              <p class="crosscut__description">
+                <i class="fa-regular fa-circle-check"></i> Improved cognitive function
+              </p>
+            </div>
+              
             <button class="purchase__btn">Purchase Now</button>
           </div>
 
@@ -333,19 +335,22 @@
             <h3 class="crosscut__title">OPEN GYM</h3>
             <h1 class="crosscut__price">109$<sub class="sub__text">/MO</sub></h1>
 
-            <p class="crosscut__description">
-              <i class="fa-regular fa-circle-check"></i> Exercise improves mood
-            </p>
-            <p class="crosscut__description">
-              <i class="fa-regular fa-circle-check"></i> Exercise boosts energy
-            </p>
-            <p class="crosscut__description">
-              <i class="fa-regular fa-circle-check"></i> Exercise can be fun and social!
-            </p>
+            <div>
+
+              <p class="crosscut__description">
+                <i class="fa-regular fa-circle-check"></i> Exercise improves mood
+              </p>
+              <p class="crosscut__description">
+                <i class="fa-regular fa-circle-check"></i> Exercise boosts energy
+              </p>
+              <p class="crosscut__description">
+                <i class="fa-regular fa-circle-check"></i> Exercise can be fun and social!
+              </p>
             <p class="crosscut__description">
               <i class="fa-regular fa-circle-check"></i> Improved cognitive function
             </p>
-
+          </div>
+            
             <button class="purchase__btn">Purchase Now</button>
           </div>
           <i class="arrow__icon fa-solid fa-circle-arrow-right"></i>
